; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/mtip32xx/extr_mtip32xx.c_mtip_read_log_page.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/mtip32xx/extr_mtip32xx.c_mtip_read_log_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtip_port = type { i32 }
%struct.host_to_dev_fis = type { i32, i32, i32, i32, i32, i64, i32, i32 }

@ATA_CMD_READ_LOG_EXT = common dso_local global i32 0, align 4
@ATA_DEVICE_OBS = common dso_local global i32 0, align 4
@ATA_SECT_SIZE = common dso_local global i32 0, align 4
@GFP_ATOMIC = common dso_local global i32 0, align 4
@MTIP_INTERNAL_COMMAND_TIMEOUT_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtip_port*, i32, %struct.host_to_dev_fis*, i32, i32)* @mtip_read_log_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtip_read_log_page(%struct.mtip_port* %0, i32 %1, %struct.host_to_dev_fis* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.mtip_port*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.host_to_dev_fis*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.host_to_dev_fis, align 8
  store %struct.mtip_port* %0, %struct.mtip_port** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.host_to_dev_fis* %2, %struct.host_to_dev_fis** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = call i32 @memset(%struct.host_to_dev_fis* %11, i32 0, i32 40)
  %13 = getelementptr inbounds %struct.host_to_dev_fis, %struct.host_to_dev_fis* %11, i32 0, i32 0
  store i32 39, i32* %13, align 8
  %14 = getelementptr inbounds %struct.host_to_dev_fis, %struct.host_to_dev_fis* %11, i32 0, i32 1
  store i32 128, i32* %14, align 4
  %15 = load i32, i32* @ATA_CMD_READ_LOG_EXT, align 4
  %16 = getelementptr inbounds %struct.host_to_dev_fis, %struct.host_to_dev_fis* %11, i32 0, i32 7
  store i32 %15, i32* %16, align 4
  %17 = load i32, i32* %10, align 4
  %18 = and i32 %17, 255
  %19 = getelementptr inbounds %struct.host_to_dev_fis, %struct.host_to_dev_fis* %11, i32 0, i32 2
  store i32 %18, i32* %19, align 8
  %20 = load i32, i32* %10, align 4
  %21 = lshr i32 %20, 8
  %22 = and i32 %21, 255
  %23 = getelementptr inbounds %struct.host_to_dev_fis, %struct.host_to_dev_fis* %11, i32 0, i32 3
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* %7, align 4
  %25 = getelementptr inbounds %struct.host_to_dev_fis, %struct.host_to_dev_fis* %11, i32 0, i32 6
  store i32 %24, i32* %25, align 8
  %26 = getelementptr inbounds %struct.host_to_dev_fis, %struct.host_to_dev_fis* %11, i32 0, i32 5
  store i64 0, i64* %26, align 8
  %27 = load i32, i32* @ATA_DEVICE_OBS, align 4
  %28 = getelementptr inbounds %struct.host_to_dev_fis, %struct.host_to_dev_fis* %11, i32 0, i32 4
  store i32 %27, i32* %28, align 8
  %29 = load %struct.host_to_dev_fis*, %struct.host_to_dev_fis** %8, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* @ATA_SECT_SIZE, align 4
  %32 = mul i32 %30, %31
  %33 = call i32 @memset(%struct.host_to_dev_fis* %29, i32 0, i32 %32)
  %34 = load %struct.mtip_port*, %struct.mtip_port** %6, align 8
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* %10, align 4
  %37 = load i32, i32* @ATA_SECT_SIZE, align 4
  %38 = mul i32 %36, %37
  %39 = load i32, i32* @GFP_ATOMIC, align 4
  %40 = load i32, i32* @MTIP_INTERNAL_COMMAND_TIMEOUT_MS, align 4
  %41 = call i32 @mtip_exec_internal_command(%struct.mtip_port* %34, %struct.host_to_dev_fis* %11, i32 5, i32 %35, i32 %38, i32 0, i32 %39, i32 %40)
  ret i32 %41
}

declare dso_local i32 @memset(%struct.host_to_dev_fis*, i32, i32) #1

declare dso_local i32 @mtip_exec_internal_command(%struct.mtip_port*, %struct.host_to_dev_fis*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
